--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ img {
 }
 .header-adres {
 	color: var(--pretitle-color);
+	fill: var(--akcent-color);
 }
 .header-link:hover,
 .header-link:focus,
@@ -124,11 +125,25 @@ img {
 .header-adres:focus {
 	color: var(--akcent-color);
 }
+
 .header-link.current {
 	color: var(--akcent-color);
 }
 .header-nav {
 	margin-left: auto;
+}
+.header-adres.mail,
+.header-adres.tel {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	fill: var(--pretitle-color);
+}
+
+.header-adres:hover .mail-icon,
+.header-adres:focus .mail-icon .header-adres:hover .tel-icon,
+.header-adres:focus .tel-icon {
+	fill: currentColor;
 }
 
 /*Футер*/
@@ -170,13 +185,65 @@ img {
 	margin-bottom: 9px;
 }
 
+.sosial-title {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: var(--white-color);
+	margin-bottom: 20px;
+}
+
+.footer-soc-link {
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	background: rgba(255, 255, 255, 0.1);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: var(--white-color);
+}
+
+.footer-soc-icon {
+	width: 20px;
+	height: 20px;
+	fill: currentColor;
+}
+
+.footer-soc {
+	display: flex;
+	gap: 10px;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+	background-color: var(--akcent-color);
+}
+
+.footer .container {
+	display: flex;
+	align-items: baseline;
+	gap: 70px;
+}
 /* ============Studio Page=============== */
 /*Герой*/
 .hero-section {
-	background-color: var(--fon-akcent);
 	padding-top: 200px;
 	padding-bottom: 200px;
 	text-align: center;
+}
+
+.container-fluid {
+	width: 1600px;
+	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: var(--fon-akcent); /*если фон не прогрузился*/
 }
 
 .hero-title {
@@ -249,7 +316,24 @@ img {
 	margin-left: 30px;
 }
 
+.original-icon-fon {
+	width: 270px;
+	height: 120px;
+	background-color: #f5f4fa;
+	border-radius: 4px;
+	margin-bottom: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.original-icon {
+	width: 70px;
+	height: 70px;
+}
+
 .original-title {
+	display: flex;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
@@ -273,7 +357,8 @@ img {
 	width: calc((100% - 60px) / 3);
 }
 .comanda-title,
-.robota-title {
+.robota-title,
+.clients-title {
 	margin-bottom: 50px;
 	text-align: center;
 }
@@ -296,9 +381,6 @@ img {
 .komanda {
 	background-color: #f5f4fa;
 	text-align: center;
-}
-
-.comanda-title {
 }
 
 .comanda-list {
@@ -329,6 +411,8 @@ img {
 	letter-spacing: 0.03em;
 
 	color: var(--pretitle-color);
+
+	margin-bottom: 16px;
 }
 
 .fio {
@@ -338,7 +422,71 @@ img {
 	padding: 30px 5px;
 }
 
+.com-soc {
+	display: flex;
+	gap: 10px;
+	justify-content: center;
+}
+
+.com-soc-link {
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	background: var(--white-color);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: var(--white-color);
+}
+
+.com-soc-link:hover,
+.com-soc-link:focus {
+	background-color: var(--akcent-color);
+}
+.com-soc-icon {
+	width: 20px;
+	height: 20px;
+	fill: #afb1b8;
+}
+
+.com-soc-link:hover .com-soc-icon,
+.com-soc-link:focus .com-soc-icon {
+	fill: currentColor;
+}
+
+/*Наши клиенты*/
+.clients-list {
+	display: flex;
+	gap: 30px;
+}
+.clients-item {
+	width: 170px;
+	height: 92px;
+	border: 1px solid #afb1b8;
+	border-radius: 4px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.clients-link {
+	width: 106px;
+	height: 60px;
+	color: var(--akcent-color);
+}
+.clients-icon {
+	width: 100%;
+	height: 100%;
+	fill: #afb1b8;
+}
+
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
+	fill: currentColor;
+}
+
 /* ==========================-Portfolio Page============================ */
+
 /*Фільтр*/
 .portfolio-filtr {
 	background-color: #f5f4fa;
@@ -366,8 +514,17 @@ img {
 	text-decoration: underline solid var(--akcent-color);
 	color: var(--white-color);
 
-	cursor: pointer;
-	border: none;
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/*Приклади*/
+.port-shad {
+	text-decoration: none;
+	display: block;
+}
+.port-shad:hover,
+.port-shad:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-title {
@@ -387,6 +544,7 @@ img {
 }
 
 .foto-item.port {
+	display: block;
 	width: calc((100% - 60px) / 3);
 }
 .portfolio-list {
