--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,8 @@ img {
 }
 
 .header-adres:hover .mail-icon,
-.header-adres:focus .mail-icon .header-adres:hover .tel-icon,
+.header-adres:focus .mail-icon,
+.header-adres:hover .tel-icon,
 .header-adres:focus .tel-icon {
 	fill: currentColor;
 }
@@ -233,10 +234,7 @@ img {
 	padding-top: 200px;
 	padding-bottom: 200px;
 	text-align: center;
-}
-
-.container-fluid {
-	width: 1600px;
+	max-width: 1600px;
 	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -317,7 +315,6 @@ img {
 }
 
 .original-icon-fon {
-	width: 270px;
 	height: 120px;
 	background-color: #f5f4fa;
 	border-radius: 4px;
@@ -333,7 +330,6 @@ img {
 }
 
 .original-title {
-	display: flex;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
@@ -462,21 +458,21 @@ img {
 .clients-item {
 	width: 170px;
 	height: 92px;
+}
+
+.clients-link {
+	width: 100%;
+	height: 100%;
+	color: var(--akcent-color);
 	border: 1px solid #afb1b8;
 	border-radius: 4px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-
-.clients-link {
+.clients-icon {
 	width: 106px;
 	height: 60px;
-	color: var(--akcent-color);
-}
-.clients-icon {
-	width: 100%;
-	height: 100%;
 	fill: #afb1b8;
 }
 
